<resources>
    <string name="app_name">网易新闻</string>

    <!--新闻的子标题-->
    <string-array name="titles">
        <item>头条</item>
        <item>精选</item>
        <item>娱乐</item>
        <item>段子</item>
        <item>图片</item>
        <item>视频</item>
    </string-array>

    <!--话题界面的标题-->
    <string-array name="topic_titles">
        <item>问吧</item>
        <item>话题</item>
        <item>关注</item>
    </string-array>

    <!--抽取的文字-->
    <string name="join">参加</string>
    <string name="login_over">完成</string>
    <string name="login_error">错误</string>
    <string name="login_cancel">取消</string>
    <string name="out_app">再按一次退出程序</string>
    <string name="no_detail">无详情</string>
    <string name="turn_enter">跳转</string>

    <!--一级界面的Button文字-->
    <string name="news_character">新闻</string>
    <string name="topic_character">话题</string>
    <string name="live_character">直播</string>
    <string name="me_character">我</string>

    <!--Me界面的文字-->
    <string name="fragment_me_set">设置</string>
    <string name="fragment_me_read">阅读</string>
    <string name="fragment_me_collect">收藏</string>
    <string name="fragment_me_reply">跟帖</string>
    <string name="fragment_me_gold">金币</string>
    <string name="fragment_me_login">立即登录</string>
    <string name="fragment_me_action">赢积分 抢大礼!</string>
    <string name="off_read">已离线阅读</string>
    <string name="off_read_begin">离线阅读</string>
    <string name="off_read_toast">开始离线阅读</string>
    <string name="off_read_stop_toast">结束离线阅读</string>
    <string name="my_msg">暂无任何消息</string>
    <string name="dynamic">暂无任何动态</string>

    <!--登陆界面-->
    <string name="login_login">登陆</string>
    <string name="login_user">网易邮箱/手机号</string>
    <string name="login_password">密码</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_selete_character">还可以选择一下方式登陆</string>
    <string name="login_weixin">微信账号登陆</string>
    <string name="login_sina">新浪微博登陆</string>
    <string name="login_qq">QQ账号登陆</string>
    <string name="login_user_no">没有账号?</string>
    <string name="login_user_register">注册网易邮箱</string>

    <!--直播界面-->
    <string name="live_characters">网易原创</string>

    <!--popupwindow界面的文字-->
    <string name="popup_change">切换栏目</string>
    <string name="popup_delete">长按排序或删除</string>

    <!--话题界面的话题-->
    <string name="theme_position_4">精选问吧推荐</string>
    <string name="theme_position_more">更多</string>

    <!--帮助与反馈界面-->
    <string name="helpandfb_title">帮助与反馈</string>
    <string name="helpandfb_feedback">意见反馈</string>
    <string name="helpandfb_net">网络诊断</string>
    <string name="helpandfb_question">常见问题</string>


    <!--设置界面-->
    <string name="set_title">设置</string>
    <string name="set_user">账号设置</string>
    <string name="set_person">个人设置</string>
    <string name="set_bind">绑定其他平台</string>
    <string name="set_system">系统设置</string>
    <string name="set_programa">栏目插件设置</string>
    <string name="set_character">字体设置</string>
    <string name="set_default">默认字体</string>
    <string name="set_read">阅读偏好</string>
    <string name="set_content_charsize">正文字号</string>
    <string name="set_middle_size">中号字</string>
    <string name="set_news_push">要闻推送</string>
    <string name="set_reply">回复我的跟贴</string>
    <string name="set_WiFi">Wi-Fi自动离线</string>
    <string name="set_notWifi">非Wifi网络不下载图片</string>
    <string name="set_clean">手动清理缓存</string>
    <string name="set_other">其他设置</string>
    <string name="set_check">检查更新</string>
    <string name="set_recommend">应用推荐</string>
    <string name="set_grade">为网易新闻评分</string>
    <string name="set_story">封面故事</string>
    <string name="set_about">关于</string>

    <!--新闻界面跳转过去的搜索界面的文字-->
    <string name="search_title">搜索</string>
    <string name="search_et_hint">请输入关键字...</string>
    <string name="search_read_history">阅读历史</string>
    <string name="search_more">更多</string>
    <string name="search_hot_word">近期热词</string>

    <!--问吧界面头布局的文字-->
    <string name="ask_falv">法律</string>
    <string name="ask_health">健康</string>
    <string name="ask_car">汽车</string>
    <string name="ask_caijing">财经</string>
    <string name="ask_history">历史</string>
    <string name="ask_current">时政</string>
    <string name="ask_physic">体育</string>
    <string name="ask_war">军事</string>
    <string name="ask_travel">旅游</string>
    <string name="ask_house">房产</string>
    <string name="ask_technology">科技</string>
    <string name="ask_teach">教育</string>
    <string name="ask_amuse">娱乐</string>
    <string name="ask_live">生活</string>
    <string name="ask_fashion">时尚</string>

    <!--详情界面的Dialog的文字-->
    <string name="dialog_share">分享</string>
    <string name="dialog_collection">收藏</string>
    <string name="dialog_jieping">态度截屏</string>
    <string name="dialog_character">正文字号</string>
    <string name="dialog_night">夜间模式</string>
    <string name="dialog_fault">我要报错</string>
    <string name="dialog_save">保存</string>

    <string name="dialog_change_collection">取消收藏</string>

    <!--toast的文字-->
    <string name="toast_collection_success">收藏成功!</string>
    <string name="toast_collection_cancel">已取消收藏!</string>
</resources>
