<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/fragment_me_bg">
        <ImageView
            android:id="@+id/act_help_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_back"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/middle_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/helpandfb_title"
            android:textColor="@color/white_bg"
            android:textSize="@dimen/big_size"
            android:layout_marginLeft="@dimen/middle_margin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="@dimen/middle_margin">
            <Button
                android:id="@+id/act_help_feedback"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/helpandfb_feedback"
                android:background="@color/white_bg"
                android:paddingLeft="130dp"
                android:paddingRight="130dp"
                android:drawableLeft="@mipmap/help_feedback" />
            <Button
                android:id="@+id/act_help_net"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/helpandfb_net"
                android:background="@color/white_bg"
                android:layout_marginTop="@dimen/middle_margin"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/helpandfb_question"
            android:layout_marginLeft="@dimen/middle_margin"
            android:gravity="center_vertical"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">

        </ScrollView>
    </LinearLayout>
</LinearLayout>